syntax = "proto3";

option go_package = "github.com/bercivarga/commons/api";

package api;

message Order {
  string id = 1;
  string customerId = 2;
  string status = 3;
  repeated Item items = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message ItemsWithQuantity {
  string id = 1;
  int32 quantity = 2;
}

message CreateOrderRequest {
  string customerId = 1;
  repeated ItemsWithQuantity items = 2;
}

message Item {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  string priceId = 4;
}